# base_python_project

./: Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: Makefile  pyproject.toml
